# fftw3-rs

./: .gitignore  .travis.yml  COPYING  Cargo.toml  Makefile  README.md  rust.mk  search-index.js
examples/: basic.rs  builder.rs  builder2.rs
fftw3/: enum.FftError.html  fn.c2c_1d.html  index.html  macro.wisdom!.html  stability.html  stability.json  struct.FftwVec.html  struct.Plan.html  struct.RawPlan.html
fftw3-sys/: Cargo.toml  build.rs  ffi.fftw_alloc_complex.html  ffi.fftw_alloc_real.html  ffi.fftw_cleanup.html  ffi.fftw_cleanup_threads.html  ffi.fftw_cost.html  ffi.fftw_destroy_plan.html  ffi.fftw_estimate_cost.html  ffi.fftw_execute.html  ffi.fftw_execute_dft.html  ffi.fftw_execute_dft_c2r.html  ffi.fftw_execute_dft_r2c.html  ffi.fftw_execute_r2r.html  ffi.fftw_execute_split_dft.html  ffi.fftw_execute_split_dft_c2r.html  ffi.fftw_execute_split_dft_r2c.html  ffi.fftw_export_wisdom.html  ffi.fftw_export_wisdom_to_file.html  ffi.fftw_export_wisdom_to_filename.html  ffi.fftw_export_wisdom_to_string.html  ffi.fftw_flops.html  ffi.fftw_forget_wisdom.html  ffi.fftw_fprint_plan.html  ffi.fftw_free.html  ffi.fftw_import_system_wisdom.html  ffi.fftw_import_wisdom.html  ffi.fftw_import_wisdom_from_file.html  ffi.fftw_import_wisdom_from_filename.html  ffi.fftw_import_wisdom_from_string.html  ffi.fftw_init_threads.html  ffi.fftw_malloc.html  ffi.fftw_plan_dft.html  ffi.fftw_plan_dft_1d.html  ffi.fftw_plan_dft_2d.html  ffi.fftw_plan_dft_3d.html  ffi.fftw_plan_dft_c2r.html  ffi.fftw_plan_dft_c2r_1d.html  ffi.fftw_plan_dft_c2r_2d.html  ffi.fftw_plan_dft_c2r_3d.html  (+228 more)
num/: fn.abs.html  fn.abs_sub.html  fn.one.html  fn.pow.html  fn.signum.html  fn.zero.html  index.html  stability.html  stability.json
src/: builder.rs  (+7 more)
(+213 files in other folders)
