[package]

name = "fftw3-sys"
version = "0.0.1"
authors = [ "Huon Wilson <dbau.pp@gmail.com>" ]

homepage = "https://github.com/huonw/fftw3-rs"
repository = "https://github.com/huonw/fftw3-rs"
license = "MIT/Apache-2.0"
keywords = []
description = """
Low-level bindings to the FFTW3 library.
"""

build = "build.rs"
links = "fftw3"

[dependencies]
libc = "*"

[build-dependencies]
pkg-config = "*"

[lib]
name = "fftw3_sys"
path = "lib.rs"
